# changelog-ci-poc

./: CHANGELOG.md  README.md  pyproject.toml
mypackage/: mymodule.py
