[tool.poetry]
name = "mymodule"
version = "0.3.1"
description = "PoC for changelog-ci"
authors = ["Robin Matz <robin.s.matz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
